[tool.poetry]
name = "fastapi-sqlmodel-alembic"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
alembic = "^1.12.1"
fastapi = "^0.104.1"
sqlmodel = "^0.0.11"
uvicorn = "^0.23.2"
asyncpg = "^0.28.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
